# CorePilot

./: .fallowrc.json  .gitignore  CLAUDE.md  PROGRESS.md  README.md  index.html  package-lock.json  package.json
branding/: feature-cores.mjs  feature-fan.mjs  feature-gpu.mjs  feature-monitor.mjs  feature-optimize.mjs  feature-osd.mjs  feature-taskmgr.mjs  header.mjs  lib.mjs  render.mjs
design-system/: MASTER.md
docs/: osd-injection-research.md  osd-spec.md
docs/superpowers/plans/: 2026-06-10-fan-autotune.md  2026-06-18-telemetry-stability.md  2026-06-21-critical-path-isolation.md  2026-06-22-single-owner-sampler.md
docs/superpowers/specs/: 2026-06-04-fan-control-design.md  2026-06-10-fan-autotune-design.md  2026-06-17-telemetry-stability-design.md  2026-06-21-critical-path-isolation-design.md  2026-06-22-single-owner-sampler-design.md  2026-06-23-disk-space-analyzer-design.md  2026-06-24-disk-mft-fastscan.md  2026-06-24-disk-spacesniffer-realtime.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/corepilot-osd-ipc/: Cargo.toml
src-tauri/crates/corepilot-osd-ipc/src/: lib.rs
src-tauri/crates/corepilot-overlay/: Cargo.toml
src-tauri/crates/corepilot-overlay/src/: detect.rs  format.rs  lib.rs  render.rs
src-tauri/icons/: icon.icns
src-tauri/sensord/: Program.cs  sensord.csproj
src-tauri/sensord/Smu/: RyzenSmuHost.cs  SmuProtocol.cs
src-tauri/src/: affinity.rs  commands.rs  debug_log.rs  disk_scan.rs  disk_scan_mft.rs  error.rs  fan.rs  fps.rs  game_library.rs  gpu.rs  gpu_load.rs  inject.rs  lib.rs  load_gen.rs  main.rs  netfix.rs  nvapi_oc.rs  optimize.rs  osd.rs  overlay.rs  overlay_inject.rs  perf_recorder.rs  persist.rs  process.rs  process_icon.rs  sampler.rs  sensors.rs  serde_u64.rs  smu.rs  state.rs  sysmon.rs  taskbar_mon.rs  telemetry.rs  topology.rs  tray.rs  tweaks.rs  watchdog.rs  winsvc.rs
src-tauri/src/fan_autotune/: io.rs  mod.rs  model.rs  passive.rs  sim_tests.rs
src/components/charts/: CoreGraphs.tsx  CoreHeatmap.tsx  DualSparkline.tsx  Sparkline.tsx
src/components/cores/: CoreGrid.tsx  GroupRail.tsx  ProcessTable.tsx
src/components/fans/: AutoTuneWizard.tsx  FanCurveEditor.tsx
src/components/perf/: DualAxisChart.tsx  PerfHistory.tsx  PerfReport.tsx  TimeSeriesChart.tsx
src/components/shell/: NavRail.tsx  StatusBar.tsx  TitleBar.tsx
src/components/taskmgr/: DetailsTable.tsx  GpuDetail.tsx  PerfView.tsx  ProcIcon.tsx  ProcessView.tsx  ServicesView.tsx  StartupView.tsx  TmProcessTable.tsx  procGroups.ts
src/components/tuning/: SmuTelemetry.tsx  SmuTuning.tsx
src/components/ui/: AnimatedNumber.tsx  Button.tsx  ColorPicker.tsx  ContextMenu.tsx  FeaturePanel.tsx  Modal.tsx  Ripple.tsx  SecondaryTabs.tsx  Segmented.tsx  Slider.tsx  TabHeader.tsx  Toggle.tsx
src/hooks/: useAffinityEnforcer.ts  useDiskScanEvents.ts  useMetricsHistory.ts  useOsdHotkey.ts  useOverlayInjection.ts  usePerfRecorder.ts  useProcesses.ts  useSensors.ts  useSharedTelemetry.ts
src/lib/: autotuneUtils.test.ts  autotuneUtils.ts  colors.ts  cpu.ts  format.ts  i18n.ts  ipc.ts  motion.ts  osd.ts  osdPalette.ts  osdThresholds.ts  perf.ts  persist.ts
src/osd/: OsdOverlay.tsx  OsdPlate.tsx
src/store/: diskScan.ts  fanAutotune.ts  fanProfiles.ts  gpuProfiles.ts  groups.ts  osd.ts  perfHistory.ts  recordTargets.ts  settings.ts  tweaks.ts  ui.ts
src/tabs/: AmdTuning.tsx  CoreAssignment.tsx  DiskAnalyzer.tsx  FanControl.tsx  GpuTune.tsx  Monitor.tsx  Optimize.tsx  OsdConfig.tsx  Settings.tsx  TaskManager.tsx  Tuning.tsx
src/tabs/disk/: DetailPanel.tsx  DiskWorkspace.tsx
src/tabs/disk/treemap/: Breadcrumb.tsx  TreemapCanvas.tsx  colors.ts  layout.ts  names.ts
