[package]
name = "corepilot"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
# `cli.rs` adds a second binary; pin the default so `cargo run` / `tauri dev`
# keep launching the GUI app, not the CLI.
default-run = "corepilot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "corepilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_SystemInformation", "Win32_System_ProcessStatus", "Win32_System_Memory", "Win32_System_Power", "Win32_Security", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Performance", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_System_Services", "Win32_System_Registry", "Win32_Storage_FileSystem"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "sync", "time", "macros"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
sysinfo = "0.39.3"
anyhow = "1.0.102"
thiserror = "2.0.18"
tracing = "0.1.44"
parking_lot = "0.12.5"
dashmap = "6.2.1"
once_cell = "1.21.4"
window-vibrancy = "0.7.1"
tauri-plugin-store = "2.4.3"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
nvml-wrapper = "0.12"
nvapi = "0.1.4"
ferrisetw = "1"

